# Subspace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
client/: CMakeLists.txt  main.c  subspaceclient.c  subspaceclient.h
client/capp/: capp.h  onexecute.c  onloop.c
client/codegen/: codegen.h
client/codegen/win32/: asm.c  asm.h  codegen.c  codegen.h  funcinfo.h  hookgen.c  hookgen.h  wrapgen.c  wrapgen.h
client/combatcontrol/: rendertarget.c
client/commandgui/: commandgui.h  keydown.c
client/completeship/: completeship.h
client/ftl/: ftl.c  ftl.h  functions_capp.h  functions_cevent.h  functions_cfps.h  functions_combatcontrol.h  functions_commandgui.h  functions_completeship.h  functions_misc.h  functions_shipmanager.h  functions_startup.h  functions_worldmanager.h  globals.h  struct.c  struct.h
client/ftl/graphics/: functions_freetype.h
client/ftl/win32/: functions_basic.c  functions_basic.h
client/hook/: function.h  hook.h  module.c  module.h  string.h  symbol.h
client/hook/win32/: export.c  hook.c  string.c  symbol.c
client/loader/: imgutil.h  loader.h  rtld.c  rtldoverrides.c
client/loader/win32/: loader.c  rtld.c  rtld.h  rtldoverrides.c
client/mousecontrol/: onrender.c
client/patch/: patch.c  patch.h
client/patch/capp/: patch_capp_onexecute.c  patch_capp_onkeydown.c
client/patch/combatcontrol/: patch_combatcontrol_rendertarget.c
client/patch/commandgui/: patch_commandgui_keydown.c
client/patch/mousecontrol/: patch_mousecontrol_onrender.c
client/patch/seq/: seq_capp.c  seq_capp.h  seq_commandgui.c  seq_commandgui.h  seq_mousecontrol.c  seq_mousecontrol.h  seq_numerichull.c  seq_numerichull.h  seq_startup.c  seq_startup.h
client/patch/shipstatus/: patch_shipstatus_renderhealth.c  shipstatus.h  validate_shipstatus.c
client/patch/win32/: patch_main.c  seq_osdep.h
client/shipmanager/: shipmanager.h
client/shipstatus/: renderhealth.c  shipstatus.h
client/textlibrary/: gettext.c
client/win32/: entry.c  kernel32_overrides.c  kernel32_overrides.h  winmain.c  winmain.h
client/win32/codegen/: funcinfo.h  (+3 more)
client/worldmanager/: worldmanager.h
game/: CMakeLists.txt  CMakePresets.json  subspacegame.c  subspacegame.h  tlsarray.lib  version.c
game/capp/: capp.h  onexecute.c  onkeydown.c  onloop.c
game/cfps/: cfps.h  onloop.c
game/combatcontrol/: combatcontrol.h  rendertarget.c
game/commandgui/: commandgui.h  keydown.c  onloop.c
game/control/: cmds.c  cmds.h  controlclient.c  controlclient.h  controlconnect.c  controlconnect.h  messagequeue.c  messagequeue.h
game/feature/: base.c  feature.c  feature.h  frameadv.c  frameadv.h  infoblock.c  infoblock.h  numerichull.c  numerichull.h  timewarp.c  timewarp.h  tweaks.c  tweaks.h
game/ftl/: achievementtracker.h  blueprintmanager.h  capp.h  cevent.h  cfps.h  combatcontrol.h  commandgui.h  completeship.h  filehelper.h  ftl.c  ftl.h  ftlbutton.h  functions_capp.h  functions_cevent.h  functions_cfps.h  functions_combatcontrol.h  functions_commandgui.h  functions_misc.h  functions_mousecontrol.h  functions_ship.h  functions_shipmanager.h  functions_shipstatus.h  functions_starmap.h  functions_startup.h  functions_textlibrary.h  globals.h  mainmenu.h  misc.h  mousecontrol.h  resourcecontrol.h  scorekeeper.h  ship.h  shipmanager.h  shipstatus.h  starmap.h  startup.h  struct.c  struct.h  textlibrary.h  tutorialmanager.h  (+2 more)
game/hook/: addrsort.c  disasmtrace.c  disasmtrace.h  hook.h  module.c  module.h  string.h  symbol.c  symbol.h
game/input/: keybinds.c  keybinds.h  keyboard.c  keyboard.h
game/log/: log.c  log.h
game/mousecontrol/: mousecontrol.h  onrender.c
game/patch/: patch.c  patch.h  patchlist.h  required.c
game/ship/: ship.h
game/shipmanager/: shipmanager.h
game/shipstatus/: renderhealth.c
game/textlibrary/: gettext.c  textlibrary.h
game/timewarp/: timewarp.c  timewarp.h
game/win32/: entry.c  kernel32_overrides.c  osdep.c  osdep.h  subspacegame.rc  thread.c  winerror.c  winmain.c
game/worldmanager/: worldmanager.h
lib/: CMakeLists.txt
lib/cd/: CMakeLists.txt
lib/cx/: .gitrepo
lib/disasm/: CMakeLists.txt
lib/freetype/: .gitrepo  CMakeLists.txt
lib/iup/: CMakeLists.txt
lib/libpkg/: .clang-format  CMakeLists.txt
lib/libpng/: .gitrepo  CMakeLists.txt  pngmem.c
lib/minicrt/: CMakeLists.txt  hashtbl.c  lazyinit.c  lock.c  mem.c  minicrt.c  sbuflite.c  smalloc.c  string.c  xprintf.c
lib/nanosvg/: .gitrepo  CMakeLists.txt
lib/sqlite/: .gitrepo  CMakeLists.txt
lib/zlib/: .gitrepo  CMakeLists.txt  gzguts.h  gzlib.c  gzread.c  gzwrite.c  zutil.c
subspace/: CMakeLists.txt  CMakePresets.json  filesys.c  log.c  process.h  subspace.c  subspace.h  version.c
subspace/control/: cmds.c  cmds.h  controlclient.auto.inc  controlclient.c  controlclient.h  controlclient.sidl  controlfields.c  controlserver.auto.inc  controlserver.c  controlserver.h  controlserver.sidl  controltask.auto.inc  controltask.c  controltask.h  controltask.sidl
subspace/db/: database.auto.inc  database.c  database.h  database.sidl  schema.c  schema.h
subspace/feature/: feature.auto.inc  feature.c  feature.h  feature.sidl  featureregistry.auto.inc  featureregistry.c  featureregistry.h  featureregistry.sidl  features.c  features.h
subspace/gamemgr/: gameinst.auto.inc  gameinst.c  gameinst.h  gameinst.sidl  gamemgr.auto.inc  gamemgr.c  gamemgr.h  gamemgr.sidl
subspace/kbmgr/: kbmgr.auto.inc  kbmgr.c  kbmgr.h  kbmgr.sidl  keybind.auto.inc  keybind.c  keybind.h  keybind.sidl  keymap.c  keymap.h
subspace/lang/: lang.c  lang.h  langdb.auto.inc  langdb.c  langdb.h  langdb.sidl
subspace/lua/: luamodules.c  luamodules.h  luathread.c  luathread.h
subspace/ui/: about.c  about.h  mainwin.auto.inc  mainwin.c  mainwin.h  mainwin.sidl  mainwinlayout.c  mainwinmenu.c  optionswin.auto.inc  optionswin.c  optionswin.h  optionswin.sidl  settingswin.auto.inc  settingswin.c  settingswin.h  settingswin.sidl  subspaceui.auto.inc  subspaceui.c  subspaceui.h  subspaceui.sidl  uithread.c  uithread.h
subspace/win32/: process.c  subspace.manifest  subspace.rc  subspacedbg.c  win32.c
(+449 files in other folders)
