# Note, this cmake file is currently for windows only

set(IUP_SOURCES
    src/iup.c
    src/iup_animatedlabel.c
    src/iup_array.c
    src/iup_assert.c
    src/iup_attrib.c
    src/iup_backgroundbox.c
    src/iup_box.c
    src/iup_button.c
    src/iup_callback.c
    src/iup_canvas.c
    src/iup_cbox.c
    src/iup_childtree.c
    src/iup_class.c
    src/iup_classattrib.c
    src/iup_classbase.c
    src/iup_classinfo.c
    src/iup_colorbar.c
    src/iup_colorbrowser.c
    src/iup_colordlg.c
    src/iup_colorhsi.c
    src/iup_config.c
    src/iup_detachbox.c
    src/iup_dial.c
    src/iup_dialog.c
    src/iup_dlglist.c
    src/iup_draw.c
    src/iup_dropbutton.c
    src/iup_elempropdlg.c
    src/iup_expander.c
    src/iup_export.c
    src/iup_filedlg.c
    src/iup_fill.c
    src/iup_flatbutton.c
    src/iup_flatframe.c
    src/iup_flatlabel.c
    src/iup_flatlist.c
    src/iup_flatscrollbar.c
    src/iup_flatscrollbox.c
    src/iup_flatseparator.c
    src/iup_flattabs.c
    src/iup_flattoggle.c
    src/iup_flattree.c
    src/iup_flatval.c
    src/iup_focus.c
    src/iup_font.c
    src/iup_fontdlg.c
    src/iup_frame.c
    src/iup_func.c
    src/iup_gauge.c
    src/iup_getparam.c
    src/iup_globalattrib.c
    src/iup_globalsdlg.c
    src/iup_gridbox.c
    src/iup_hbox.c
    src/iup_image.c
    src/iup_key.c
    src/iup_label.c
    src/iup_layout.c
    src/iup_layoutdlg.c
    src/iup_ledlex.c
    src/iup_ledparse.c
    src/iup_linefile.c
    src/iup_link.c
    src/iup_list.c
    src/iup_loop.c
    src/iup_mask.c
    src/iup_maskmatch.c
    src/iup_maskparse.c
    src/iup_menu.c
    src/iup_messagedlg.c
    src/iup_multibox.c
    src/iup_names.c
    src/iup_normalizer.c
    src/iup_object.c
    src/iup_open.c
    src/iup_predialogs.c
    src/iup_progressbar.c
    src/iup_progressdlg.c
    src/iup_radio.c
    src/iup_recplay.c
    src/iup_register.c
    src/iup_sbox.c
    src/iup_scanf.c
    src/iup_scrollbox.c
    src/iup_show.c
    src/iup_space.c
    src/iup_spin.c
    src/iup_split.c
    src/iup_str.c
    src/iup_strmessage.c
    src/iup_table.c
    src/iup_tabs.c
    src/iup_text.c
    src/iup_thread.c
    src/iup_timer.c
    src/iup_toggle.c
    src/iup_tree.c
    src/iup_user.c
    src/iup_val.c
    src/iup_vbox.c
    src/iup_zbox.c
    src/win/iupwindows_help.c
    src/win/iupwindows_info.c
    src/win/iupwindows_main.c
    src/win/iupwin_brush.c
    src/win/iupwin_button.c
    src/win/iupwin_calendar.c
    src/win/iupwin_canvas.c
    src/win/iupwin_clipboard.c
    src/win/iupwin_common.c
    src/win/iupwin_datepick.c
    src/win/iupwin_dialog.c
    src/win/iupwin_dragdrop.c
    src/win/iupwin_draw.c
    src/win/iupwin_draw_gdi.c
    src/win/iupwin_draw_wdl.c
    src/win/iupwin_filedlg.c
    src/win/iupwin_focus.c
    src/win/iupwin_font.c
    src/win/iupwin_fontdlg.c
    src/win/iupwin_frame.c
    src/win/iupwin_globalattrib.c
    src/win/iupwin_handle.c
    src/win/iupwin_image.c
    src/win/iupwin_image_wdl.c
    src/win/iupwin_info.c
    src/win/iupwin_key.c
    src/win/iupwin_label.c
    src/win/iupwin_list.c
    src/win/iupwin_loop.c
    src/win/iupwin_menu.c
    src/win/iupwin_messagedlg.c
    src/win/iupwin_open.c
    src/win/iupwin_progressbar.c
    src/win/iupwin_str.c
    src/win/iupwin_tabs.c
    src/win/iupwin_text.c
    src/win/iupwin_timer.c
    src/win/iupwin_tips.c
    src/win/iupwin_toggle.c
    src/win/iupwin_touch.c
    src/win/iupwin_tree.c
    src/win/iupwin_val.c
    src/win/wdl/backend-d2d.c
    src/win/wdl/backend-dwrite.c
    src/win/wdl/backend-gdix.c
    src/win/wdl/backend-wic.c
    src/win/wdl/bitblt.c
    src/win/wdl/brush.c
    src/win/wdl/cachedimage.c
    src/win/wdl/canvas.c
    src/win/wdl/draw.c
    src/win/wdl/fill.c
    src/win/wdl/font.c
    src/win/wdl/image.c
    src/win/wdl/init.c
    src/win/wdl/memstream.c
    src/win/wdl/misc.c
    src/win/wdl/path.c
    src/win/wdl/string.c
    src/win/wdl/strokestyle.c
)
set(IUP_INCLUDES
    include/iup.h
    include/iupcbs.h
    include/iupcontrols.h
    include/iupdef.h
    include/iupdraw.h
    include/iupdraw_cd.h
    include/iupfiledlg.h
    include/iupgl.h
    include/iupglcontrols.h
    include/iupim.h
    include/iupkey.h
    include/iuplua.h
    include/iupluacontrols.h
    include/iupluafiledlg.h
    include/iupluagl.h
    include/iupluaglcontrols.h
    include/iupluaim.h
    include/iupluaole.h
    include/iupluascripterdlg.h
    include/iupluatuio.h
    include/iupluaweb.h
    include/iuplua_mglplot.h
    include/iuplua_plot.h
    include/iuplua_scintilla.h
    include/iupole.h
    include/iuptuio.h
    include/iupweb.h
    include/iup_class_cbs.hpp
    include/iup_config.h
    include/iup_export.h
    include/iup_mglplot.h
    include/iup_plot.h
    include/iup_plus.h
    include/iup_scintilla.h
    include/iup_varg.h
)

add_library(iup STATIC
    ${IUP_SOURCES}
    ${IUP_INCLUDES}
)
target_link_libraries(iup cx png)
target_compile_definitions(iup PRIVATE XALLOC_REMAP_MALLOC COBJMACROS USE_NEW_DRAW  _UNICODE UNICODE)
target_include_directories(iup
    PRIVATE
        src
        src/win/wdl
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(IUPLUA_C_SOURCES
    srclua5/elem/il_animatedlabel.c
    srclua5/elem/il_backgroundbox.c
    srclua5/elem/il_button.c
    srclua5/elem/il_calendar.c
    srclua5/elem/il_canvas.c
    srclua5/elem/il_cbox.c
    srclua5/elem/il_clipboard.c
    srclua5/elem/il_colorbar.c
    srclua5/elem/il_colorbrowser.c
    srclua5/elem/il_colordlg.c
    srclua5/elem/il_datepick.c
    srclua5/elem/il_detachbox.c
    srclua5/elem/il_dial.c
    srclua5/elem/il_dialog.c
    srclua5/elem/il_dropbutton.c
    srclua5/elem/il_expander.c
    srclua5/elem/il_filedlg.c
    srclua5/elem/il_fill.c
    srclua5/elem/il_flatbutton.c
    srclua5/elem/il_flatframe.c
    srclua5/elem/il_flatlabel.c
    srclua5/elem/il_flatlist.c
    srclua5/elem/il_flatscrollbox.c
    srclua5/elem/il_flatseparator.c
    srclua5/elem/il_flattabs.c
    srclua5/elem/il_flattoggle.c
    srclua5/elem/il_flattree.c
    srclua5/elem/il_flatval.c
    srclua5/elem/il_fontdlg.c
    srclua5/elem/il_frame.c
    srclua5/elem/il_gauge.c
    srclua5/elem/il_gridbox.c
    srclua5/elem/il_hbox.c
    srclua5/elem/il_image.c
    srclua5/elem/il_imagergb.c
    srclua5/elem/il_imagergba.c
    srclua5/elem/il_item.c
    srclua5/elem/il_label.c
    srclua5/elem/il_link.c
    srclua5/elem/il_list.c
    srclua5/elem/il_menu.c
    srclua5/elem/il_messagedlg.c
    srclua5/elem/il_multibox.c
    srclua5/elem/il_multiline.c
    srclua5/elem/il_normalizer.c
    srclua5/elem/il_param.c
    srclua5/elem/il_parambox.c
    srclua5/elem/il_progressbar.c
    srclua5/elem/il_progressdlg.c
    srclua5/elem/il_radio.c
    srclua5/elem/il_sbox.c
    srclua5/elem/il_scrollbox.c
    srclua5/elem/il_separator.c
    srclua5/elem/il_space.c
    srclua5/elem/il_spin.c
    srclua5/elem/il_spinbox.c
    srclua5/elem/il_split.c
    srclua5/elem/il_submenu.c
    srclua5/elem/il_tabs.c
    srclua5/elem/il_text.c
    srclua5/elem/il_thread.c
    srclua5/elem/il_timer.c
    srclua5/elem/il_toggle.c
    srclua5/elem/il_tree.c
    srclua5/elem/il_user.c
    srclua5/elem/il_val.c
    srclua5/elem/il_vbox.c
    srclua5/elem/il_zbox.c
    srclua5/iuplua.c
    srclua5/iuplua_api.c
    srclua5/iuplua_config.c
    srclua5/iuplua_draw.c
    srclua5/iuplua_getcolor.c
    srclua5/iuplua_getparam.c
    srclua5/iuplua_scanf.c
    srclua5/iuplua_tree_aux.c
)

function(add_lua_loh)
    foreach(arg ${ARGN})
        string(REGEX REPLACE "\\.[^.]*$" "" argbase ${arg})
        add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${argbase}.loh
            COMMAND luacmd ${CMAKE_CURRENT_SOURCE_DIR}/srclua5/bin2c.lua +${CMAKE_CURRENT_SOURCE_DIR}/${arg} > ${CMAKE_CURRENT_BINARY_DIR}/${argbase}.loh
            MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/${arg}
            )
        list(APPEND IUPLUA_LOH_FILES ${CMAKE_CURRENT_BINARY_DIR}/${argbase}.loh)
        set(IUPLUA_LOH_FILES ${IUPLUA_LOH_FILES} PARENT_SCOPE)
    endforeach()
endfunction()

add_lua_loh(
    srclua5/constants.lua
    srclua5/elem/animatedlabel.lua
    srclua5/elem/backgroundbox.lua
    srclua5/elem/button.lua
    srclua5/elem/calendar.lua
    srclua5/elem/canvas.lua
    srclua5/elem/cbox.lua
    srclua5/elem/clipboard.lua
    srclua5/elem/colorbar.lua
    srclua5/elem/colorbrowser.lua
    srclua5/elem/colordlg.lua
    srclua5/elem/datepick.lua
    srclua5/elem/detachbox.lua
    srclua5/elem/dial.lua
    srclua5/elem/dialog.lua
    srclua5/elem/dropbutton.lua
    srclua5/elem/expander.lua
    srclua5/elem/filedlg.lua
    srclua5/elem/fill.lua
    srclua5/elem/flatbutton.lua
    srclua5/elem/flatframe.lua
    srclua5/elem/flatlabel.lua
    srclua5/elem/flatlist.lua
    srclua5/elem/flatscrollbox.lua
    srclua5/elem/flatseparator.lua
    srclua5/elem/flattabs.lua
    srclua5/elem/flattoggle.lua
    srclua5/elem/flattree.lua
    srclua5/elem/flatval.lua
    srclua5/elem/fontdlg.lua
    srclua5/elem/frame.lua
    srclua5/elem/gauge.lua
    srclua5/elem/gridbox.lua
    srclua5/elem/hbox.lua
    srclua5/elem/image.lua
    srclua5/elem/imagergb.lua
    srclua5/elem/imagergba.lua
    srclua5/elem/item.lua
    srclua5/elem/label.lua
    srclua5/elem/link.lua
    srclua5/elem/list.lua
    srclua5/elem/menu.lua
    srclua5/elem/messagedlg.lua
    srclua5/elem/multibox.lua
    srclua5/elem/multiline.lua
    srclua5/elem/normalizer.lua
    srclua5/elem/param.lua
    srclua5/elem/parambox.lua
    srclua5/elem/progressbar.lua
    srclua5/elem/progressdlg.lua
    srclua5/elem/radio.lua
    srclua5/elem/sbox.lua
    srclua5/elem/scrollbox.lua
    srclua5/elem/separator.lua
    srclua5/elem/space.lua
    srclua5/elem/spin.lua
    srclua5/elem/spinbox.lua
    srclua5/elem/split.lua
    srclua5/elem/submenu.lua
    srclua5/elem/tabs.lua
    srclua5/elem/text.lua
    srclua5/elem/thread.lua
    srclua5/elem/timer.lua
    srclua5/elem/toggle.lua
    srclua5/elem/tree.lua
    srclua5/elem/user.lua
    srclua5/elem/val.lua
    srclua5/elem/vbox.lua
    srclua5/elem/zbox.lua
    srclua5/iuplua.lua
    srclua5/iup_config.lua
)

add_custom_target(iuplua_loh DEPENDS ${IUPLUA_LOH_FILES})

add_library(iuplua STATIC ${IUPLUA_C_SOURCES})
target_link_libraries(iuplua PUBLIC iup lua)
target_compile_definitions(iuplua PRIVATE IUPLUA_USELOH XALLOC_REMAP_MALLOC _UNICODE UNICODE)
target_include_directories(iuplua PRIVATE src srclua5 ${CMAKE_CURRENT_BINARY_DIR}/srclua5 ${CMAKE_CURRENT_BINARY_DIR}/srclua5/elem)
add_dependencies(iuplua iuplua_loh)